// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default date time picker 1`] = `
<Fragment>
  <AbstractModal
    ariaLabel="Time Clarification"
    classNameModal="time-clarification"
    classNameOverlay={null}
    closeOnEsc={false}
    closeOnOutsideClick={false}
    enableFocusLock={true}
    isCalledFromNotificationDialog={false}
    isFullscreen={false}
    isOpen={true}
    onRequestClose={[MockFunction]}
    role="dialog"
    rootSelector="#root"
    zIndex="9000"
  >
    <div>
      <header
        className="header"
      >
        <h1
          className="title"
        >
          Terra.dateTimePicker.timeClarification.title
        </h1>
      </header>
      <div
        className="body"
      >
        <p>
          Terra.dateTimePicker.timeClarification.message
        </p>
      </div>
      <div
        className="buttons"
      >
        <Button
          className="button-daylight"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Terra.dateTimePicker.timeClarification.button.daylightSaving"
          type="button"
          variant="emphasis"
        />
        <Button
          className="button-standard"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Terra.dateTimePicker.timeClarification.button.standardTime"
          type="button"
          variant="emphasis"
        />
      </div>
    </div>
  </AbstractModal>
  <div
    className="offset-button-container"
  >
    <Button
      aria-label=""
      className="button-offset button-offset-hidden"
      isBlock={false}
      isCompact={true}
      isDisabled={false}
      isIconOnly={false}
      isReversed={false}
      onClick={[MockFunction]}
      text=""
      title=""
      type="button"
      variant="neutral"
    />
  </div>
</Fragment>
`;

exports[`should render a disabled time clarification 1`] = `
<Fragment>
  <AbstractModal
    ariaLabel="Time Clarification"
    classNameModal="time-clarification"
    classNameOverlay={null}
    closeOnEsc={false}
    closeOnOutsideClick={false}
    enableFocusLock={true}
    isCalledFromNotificationDialog={false}
    isFullscreen={false}
    isOpen={true}
    onRequestClose={[MockFunction]}
    role="dialog"
    rootSelector="#root"
    zIndex="9000"
  >
    <div>
      <header
        className="header"
      >
        <h1
          className="title"
        >
          Terra.dateTimePicker.timeClarification.title
        </h1>
      </header>
      <div
        className="body"
      >
        <p>
          Terra.dateTimePicker.timeClarification.message
        </p>
      </div>
      <div
        className="buttons"
      >
        <Button
          className="button-daylight"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Terra.dateTimePicker.timeClarification.button.daylightSaving"
          type="button"
          variant="emphasis"
        />
        <Button
          className="button-standard"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Terra.dateTimePicker.timeClarification.button.standardTime"
          type="button"
          variant="emphasis"
        />
      </div>
    </div>
  </AbstractModal>
  <div
    className="offset-button-container"
  >
    <Button
      aria-label=""
      className="button-offset button-offset-hidden"
      isBlock={false}
      isCompact={true}
      isDisabled={true}
      isIconOnly={false}
      isReversed={false}
      onClick={[MockFunction]}
      text=""
      title=""
      type="button"
      variant="neutral"
    />
  </div>
</Fragment>
`;

exports[`should render offset button after daylight savings button clicked 1`] = `
<Fragment>
  <AbstractModal
    ariaLabel="Time Clarification"
    classNameModal="time-clarification"
    classNameOverlay={null}
    closeOnEsc={false}
    closeOnOutsideClick={false}
    enableFocusLock={true}
    isCalledFromNotificationDialog={false}
    isFullscreen={false}
    isOpen={true}
    onRequestClose={[MockFunction]}
    role="dialog"
    rootSelector="#root"
    zIndex="9000"
  >
    <div>
      <header
        className="header"
      >
        <h1
          className="title"
        >
          Terra.dateTimePicker.timeClarification.title
        </h1>
      </header>
      <div
        className="body"
      >
        <p>
          Terra.dateTimePicker.timeClarification.message
        </p>
      </div>
      <div
        className="buttons"
      >
        <Button
          className="button-daylight"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Terra.dateTimePicker.timeClarification.button.daylightSaving"
          type="button"
          variant="emphasis"
        />
        <Button
          className="button-standard"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Terra.dateTimePicker.timeClarification.button.standardTime"
          type="button"
          variant="emphasis"
        />
      </div>
    </div>
  </AbstractModal>
  <div
    className="offset-button-container"
  >
    <Button
      aria-label="America/Chicago CDT -05:00"
      className="button-offset button-offset-hidden"
      isBlock={false}
      isCompact={true}
      isDisabled={true}
      isIconOnly={false}
      isReversed={false}
      onClick={[MockFunction]}
      text=""
      title="America/Chicago CDT -05:00"
      type="button"
      variant="neutral"
    />
  </div>
</Fragment>
`;

exports[`should render offset button after daylight savings button clicked in the southern hemisphere timezone 1`] = `
<Fragment>
  <AbstractModal
    ariaLabel="Time Clarification"
    classNameModal="time-clarification"
    classNameOverlay={null}
    closeOnEsc={false}
    closeOnOutsideClick={false}
    enableFocusLock={true}
    isCalledFromNotificationDialog={false}
    isFullscreen={false}
    isOpen={true}
    onRequestClose={[MockFunction]}
    role="dialog"
    rootSelector="#root"
    zIndex="9000"
  >
    <div>
      <header
        className="header"
      >
        <h1
          className="title"
        >
          Terra.dateTimePicker.timeClarification.title
        </h1>
      </header>
      <div
        className="body"
      >
        <p>
          Terra.dateTimePicker.timeClarification.message
        </p>
      </div>
      <div
        className="buttons"
      >
        <Button
          className="button-daylight"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Terra.dateTimePicker.timeClarification.button.daylightSaving"
          type="button"
          variant="emphasis"
        />
        <Button
          className="button-standard"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Terra.dateTimePicker.timeClarification.button.standardTime"
          type="button"
          variant="emphasis"
        />
      </div>
    </div>
  </AbstractModal>
  <div
    className="offset-button-container"
  >
    <Button
      aria-label="Australia/Sydney AEDT +11:00"
      className="button-offset button-offset-hidden"
      isBlock={false}
      isCompact={true}
      isDisabled={true}
      isIconOnly={false}
      isReversed={false}
      onClick={[MockFunction]}
      text=""
      title="Australia/Sydney AEDT +11:00"
      type="button"
      variant="neutral"
    />
  </div>
</Fragment>
`;

exports[`should render offset button after standard time button clicked 1`] = `
<Fragment>
  <AbstractModal
    ariaLabel="Time Clarification"
    classNameModal="time-clarification"
    classNameOverlay={null}
    closeOnEsc={false}
    closeOnOutsideClick={false}
    enableFocusLock={true}
    isCalledFromNotificationDialog={false}
    isFullscreen={false}
    isOpen={true}
    onRequestClose={[MockFunction]}
    role="dialog"
    rootSelector="#root"
    zIndex="9000"
  >
    <div>
      <header
        className="header"
      >
        <h1
          className="title"
        >
          Terra.dateTimePicker.timeClarification.title
        </h1>
      </header>
      <div
        className="body"
      >
        <p>
          Terra.dateTimePicker.timeClarification.message
        </p>
      </div>
      <div
        className="buttons"
      >
        <Button
          className="button-daylight"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Terra.dateTimePicker.timeClarification.button.daylightSaving"
          type="button"
          variant="emphasis"
        />
        <Button
          className="button-standard"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Terra.dateTimePicker.timeClarification.button.standardTime"
          type="button"
          variant="emphasis"
        />
      </div>
    </div>
  </AbstractModal>
  <div
    className="offset-button-container"
  >
    <Button
      aria-label="America/Chicago CST -06:00"
      className="button-offset button-offset-hidden"
      isBlock={false}
      isCompact={true}
      isDisabled={true}
      isIconOnly={false}
      isReversed={false}
      onClick={[MockFunction]}
      text=""
      title="America/Chicago CST -06:00"
      type="button"
      variant="neutral"
    />
  </div>
</Fragment>
`;

exports[`should render offset button after standard time button clicked in the southern hemisphere timezone 1`] = `
<Fragment>
  <AbstractModal
    ariaLabel="Time Clarification"
    classNameModal="time-clarification"
    classNameOverlay={null}
    closeOnEsc={false}
    closeOnOutsideClick={false}
    enableFocusLock={true}
    isCalledFromNotificationDialog={false}
    isFullscreen={false}
    isOpen={true}
    onRequestClose={[MockFunction]}
    role="dialog"
    rootSelector="#root"
    zIndex="9000"
  >
    <div>
      <header
        className="header"
      >
        <h1
          className="title"
        >
          Terra.dateTimePicker.timeClarification.title
        </h1>
      </header>
      <div
        className="body"
      >
        <p>
          Terra.dateTimePicker.timeClarification.message
        </p>
      </div>
      <div
        className="buttons"
      >
        <Button
          className="button-daylight"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Terra.dateTimePicker.timeClarification.button.daylightSaving"
          type="button"
          variant="emphasis"
        />
        <Button
          className="button-standard"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onClick={[Function]}
          text="Terra.dateTimePicker.timeClarification.button.standardTime"
          type="button"
          variant="emphasis"
        />
      </div>
    </div>
  </AbstractModal>
  <div
    className="offset-button-container"
  >
    <Button
      aria-label="Australia/Sydney AEST +10:00"
      className="button-offset button-offset-hidden"
      isBlock={false}
      isCompact={true}
      isDisabled={true}
      isIconOnly={false}
      isReversed={false}
      onClick={[MockFunction]}
      text=""
      title="Australia/Sydney AEST +10:00"
      type="button"
      variant="neutral"
    />
  </div>
</Fragment>
`;
